# SomeParticles

./: .gitignore  CMakeLists.txt  README.md
SomeParticles/: GLM.hpp  SSBO.cpp  SSBO.hpp  Shader.cpp  Shader.hpp  main.cpp
SomeParticles/Shaders/: output.frag  output.vert  particles.comp
cmake/: EmbedFile.cmake  embedfile.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
